side nav completely functional

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Portfolio</title>
+    <title>Portfolio | Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <link rel="shortcut icon" type="image/jpg" href="logo.svg"/>
     <link rel="stylesheet" href="general.css">
@@ -21,30 +21,30 @@
         <nav class="navbar">
           <div id="focus"></div>
           
-          <div class="nav-icon active">
+          <a href="#home" class="nav-icon active">
             <img src="Icons/home-inactive.svg">
             <img src="Icons/home.svg">
-          </div>
+          </a>
 
-          <div class="nav-icon">
+          <a href="#profile" class="nav-icon">
             <img src="Icons/profile-inactive.svg">
             <img src="Icons/profile.svg">
-          </div>
+          </a>
 
-          <div class="nav-icon">
+          <a href="#skills" class="nav-icon">
             <img src="Icons/skills-inactive.svg">
             <img src="Icons/skills.svg">
-          </div>
+          </a>
 
-          <div class="nav-icon">
+          <a href="#projects" class="nav-icon">
             <img src="Icons/resume-inactive.svg">
             <img src="Icons/resume.svg">
-          </div>
+          </a>
 
-          <div class="nav-icon">
+          <a href="#contact" class="nav-icon">
             <img src="Icons/contact-inactive.svg">
             <img src="Icons/contact.svg">
-          </div>
+          </a>
         </nav>
       </div>
 
