navbar issue fixed?

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <link rel="shortcut icon" type="image/jpg" href="logo.svg" />
+    <link rel="shortcut icon" type="image/jpg" href="Assets/General/logo.svg" />
     <link rel="stylesheet" href="Styles/general.css" />
     <link rel="stylesheet" href="Styles/profile.css" />
+    <link rel="stylesheet" href="Styles/contact.css" />
     <link rel="stylesheet" href="Styles/side-navbar.css" />
   </head>
   <body>
@@ -115,7 +116,17 @@
         <div class="line"></div>
         
         <section id="contact">
-          <h1>Contact me</h1>
+          <div class="contact-form">
+            <div id="info">
+              <h1>Contact Me</h1>
+              <div class="form">
+
+              </div>
+            </div>
+            <div id="links">
+
+            </div>
+          </div>
         </section>
       
       </article>
