--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="Styles/profile.css" />
     <link rel="stylesheet" href="Styles/contact.css" />
     <link rel="stylesheet" href="Styles/side-navbar.css" />
+    <link rel="stylesheet" href="Styles/experience.css" />
   </head>
   <body>
     <div class="top-nav-bar">
@@ -109,7 +110,77 @@
         <div class="line"></div>
 
         <section id="projects">
-          <h1>Projects and Experience</h1>
+          <h1>Projects</h1>
+          <div class="timeline">
+            <div class="ball top"></div>
+            <ul>
+              <li class="timeline-item">
+                <p class="date pt1">Date Pt1</p>
+                <p class="date pt2">Date Pt2</p>
+                <h1 class="title">Component 1</h1>
+                <p class="description">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Obcaecati vero numquam deserunt, voluptatibus perspiciatis
+                  laboriosam, veniam magnam blanditiis quos assumenda autem
+                  consequatur quibusdam nemo commodi quod? Eligendi obcaecati
+                  molestias dolores.
+                </p>
+              </li>
+
+              <li class="timeline-item">
+                <p class="date pt1">Date Pt1</p>
+                <p class="date pt2">Date Pt2</p>
+                <h1 class="title">Component 1</h1>
+                <p class="description">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Obcaecati vero numquam deserunt, voluptatibus perspiciatis
+                  laboriosam, veniam magnam blanditiis quos assumenda autem
+                  consequatur quibusdam nemo commodi quod? Eligendi obcaecati
+                  molestias dolores.
+                </p>
+              </li>
+
+              <li class="timeline-item">
+                <p class="date pt1">Date Pt1</p>
+                <p class="date pt2">Date Pt2</p>
+                <h1 class="title">Component 1</h1>
+                <p class="description">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Obcaecati vero numquam deserunt, voluptatibus perspiciatis
+                  laboriosam, veniam magnam blanditiis quos assumenda autem
+                  consequatur quibusdam nemo commodi quod? Eligendi obcaecati
+                  molestias dolores.
+                </p>
+              </li>
+
+              <li class="timeline-item">
+                <p class="date pt1">Date Pt1</p>
+                <p class="date pt2">Date Pt2</p>
+                <h1 class="title">Component 1</h1>
+                <p class="description">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Obcaecati vero numquam deserunt, voluptatibus perspiciatis
+                  laboriosam, veniam magnam blanditiis quos assumenda autem
+                  consequatur quibusdam nemo commodi quod? Eligendi obcaecati
+                  molestias dolores.
+                </p>
+              </li>
+
+              <li class="timeline-item">
+                <p class="date pt1">Date Pt1</p>
+                <p class="date pt2">Date Pt2</p>
+                <h1 class="title">Component 1</h1>
+                <p class="description">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Obcaecati vero numquam deserunt, voluptatibus perspiciatis
+                  laboriosam, veniam magnam blanditiis quos assumenda autem
+                  consequatur quibusdam nemo commodi quod? Eligendi obcaecati
+                  molestias dolores.
+                </p>
+              </li>
+            </ul>
+            <div class="ball bottom"></div>
+          </div>
         </section>
 
         <div class="line"></div>
@@ -134,15 +205,26 @@
                   <textarea type="text" class="input multi-line"></textarea>
                 </div>
               </div>
+              <button type="submit" class="form-submission">Submit</button>
             </div>
             <div id="links">
               <div class="up-arrow">
                 <img src="Icons/up_arrow.svg" />
               </div>
               <div class="links-contact">
-                <a target="_blank" href="https://www.instagram.com/gaurav_46_04/">Instagram</a>
-                <a target="_blank" href="https://github.com/Gaurav4604">GitHub</a>
-                <a target="_blank" href="https://www.linkedin.com/in/gaurav-singh-8737701a4/">LinkedIn</a>
+                <a
+                  target="_blank"
+                  href="https://www.instagram.com/gaurav_46_04/"
+                  >Instagram</a
+                >
+                <a target="_blank" href="https://github.com/Gaurav4604"
+                  >GitHub</a
+                >
+                <a
+                  target="_blank"
+                  href="https://www.linkedin.com/in/gaurav-singh-8737701a4/"
+                  >LinkedIn</a
+                >
               </div>
             </div>
           </div>
