hover effect on timeline added

--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@
         <section id="projects">
           <h1>Projects</h1>
           <div class="timeline">
-            <div class="ball top"></div>
+            <div id="tracker-div"></div>
             <ul>
               <li class="timeline-item">
-                <p class="date pt1">Date Pt1</p>
-                <p class="date pt2">Date Pt2</p>
-                <h1 class="title">Component 1</h1>
+                <p class="date pt1">01</p>
+                <p class="date pt2">Nov - 2019</p>
+                <h1 class="title">Python</h1>
                 <p class="description">
                   Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                   Obcaecati vero numquam deserunt, voluptatibus perspiciatis
@@ -167,8 +167,8 @@
               </li>
 
               <li class="timeline-item">
-                <p class="date pt1">Date Pt1</p>
-                <p class="date pt2">Date Pt2</p>
+                <p class="date pt1">01</p>
+                <p class="date pt2">Nov - 2019</p>
                 <h1 class="title">Component 1</h1>
                 <p class="description">
                   Lorem ipsum dolor sit amet consectetur, adipisicing elit.
@@ -179,7 +179,6 @@
                 </p>
               </li>
             </ul>
-            <div class="ball bottom"></div>
           </div>
         </section>
 
@@ -233,5 +232,6 @@
     </div>
 
     <script src="side-nav.js"></script>
+    <script src="timeline-img-tracker.js" type="module"></script>
   </body>
 </html>
