--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="Styles/profile.css" />
     <link rel="stylesheet" href="Styles/contact.css" />
     <link rel="stylesheet" href="Styles/side-navbar.css" />
-    <link rel="stylesheet" href="Styles/experience.css" />
+    <link rel="stylesheet" href="Styles/projects.css" />
   </head>
   <body>
     <div class="top-nav-bar">
@@ -114,70 +114,82 @@
           <div class="timeline">
             <div id="tracker-div"></div>
             <ul>
+
               <li class="timeline-item">
-                <p class="date pt1">01</p>
-                <p class="date pt2">Nov - 2019</p>
-                <h1 class="title">Python</h1>
-                <p class="description">
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Obcaecati vero numquam deserunt, voluptatibus perspiciatis
-                  laboriosam, veniam magnam blanditiis quos assumenda autem
-                  consequatur quibusdam nemo commodi quod? Eligendi obcaecati
-                  molestias dolores.
-                </p>
+                <div>
+                  <p class="date pt1">01</p>
+                  <p class="date pt2">Nov - 2019</p>
+                  <h1 class="title">Python</h1>
+                  <p class="description">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Obcaecati vero numquam deserunt, voluptatibus perspiciatis
+                    laboriosam, veniam magnam blanditiis quos assumenda autem
+                    consequatur quibusdam nemo commodi quod? Eligendi obcaecati
+                    molestias dolores.
+                  </p>
+                </div>
               </li>
 
               <li class="timeline-item">
-                <p class="date pt1">Date Pt1</p>
-                <p class="date pt2">Date Pt2</p>
-                <h1 class="title">Component 1</h1>
-                <p class="description">
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Obcaecati vero numquam deserunt, voluptatibus perspiciatis
-                  laboriosam, veniam magnam blanditiis quos assumenda autem
-                  consequatur quibusdam nemo commodi quod? Eligendi obcaecati
-                  molestias dolores.
-                </p>
+                <div>
+                  <p class="date pt1">01</p>
+                  <p class="date pt2">Nov - 2019</p>
+                  <h1 class="title">Python</h1>
+                  <p class="description">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Obcaecati vero numquam deserunt, voluptatibus perspiciatis
+                    laboriosam, veniam magnam blanditiis quos assumenda autem
+                    consequatur quibusdam nemo commodi quod? Eligendi obcaecati
+                    molestias dolores.
+                  </p>
+                </div>
               </li>
 
               <li class="timeline-item">
-                <p class="date pt1">Date Pt1</p>
-                <p class="date pt2">Date Pt2</p>
-                <h1 class="title">Component 1</h1>
-                <p class="description">
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Obcaecati vero numquam deserunt, voluptatibus perspiciatis
-                  laboriosam, veniam magnam blanditiis quos assumenda autem
-                  consequatur quibusdam nemo commodi quod? Eligendi obcaecati
-                  molestias dolores.
-                </p>
+                <div>
+                  <p class="date pt1">01</p>
+                  <p class="date pt2">Nov - 2019</p>
+                  <h1 class="title">Python</h1>
+                  <p class="description">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Obcaecati vero numquam deserunt, voluptatibus perspiciatis
+                    laboriosam, veniam magnam blanditiis quos assumenda autem
+                    consequatur quibusdam nemo commodi quod? Eligendi obcaecati
+                    molestias dolores.
+                  </p>
+                </div>
               </li>
 
               <li class="timeline-item">
-                <p class="date pt1">Date Pt1</p>
-                <p class="date pt2">Date Pt2</p>
-                <h1 class="title">Component 1</h1>
-                <p class="description">
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Obcaecati vero numquam deserunt, voluptatibus perspiciatis
-                  laboriosam, veniam magnam blanditiis quos assumenda autem
-                  consequatur quibusdam nemo commodi quod? Eligendi obcaecati
-                  molestias dolores.
-                </p>
+                <div>
+                  <p class="date pt1">01</p>
+                  <p class="date pt2">Nov - 2019</p>
+                  <h1 class="title">Python</h1>
+                  <p class="description">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Obcaecati vero numquam deserunt, voluptatibus perspiciatis
+                    laboriosam, veniam magnam blanditiis quos assumenda autem
+                    consequatur quibusdam nemo commodi quod? Eligendi obcaecati
+                    molestias dolores.
+                  </p>
+                </div>
               </li>
 
               <li class="timeline-item">
-                <p class="date pt1">01</p>
-                <p class="date pt2">Nov - 2019</p>
-                <h1 class="title">Component 1</h1>
-                <p class="description">
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Obcaecati vero numquam deserunt, voluptatibus perspiciatis
-                  laboriosam, veniam magnam blanditiis quos assumenda autem
-                  consequatur quibusdam nemo commodi quod? Eligendi obcaecati
-                  molestias dolores.
-                </p>
+                <div>
+                  <p class="date pt1">01</p>
+                  <p class="date pt2">Nov - 2019</p>
+                  <h1 class="title">Python</h1>
+                  <p class="description">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Obcaecati vero numquam deserunt, voluptatibus perspiciatis
+                    laboriosam, veniam magnam blanditiis quos assumenda autem
+                    consequatur quibusdam nemo commodi quod? Eligendi obcaecati
+                    molestias dolores.
+                  </p>
+                </div>
               </li>
+
             </ul>
           </div>
         </section>
