--- a/index.html
+++ b/index.html
@@ -244,6 +244,6 @@
     </div>
 
     <script src="side-nav.js"></script>
-    <script src="timeline-img-tracker.js" type="module"></script>
+    <!-- <script src="timeline-img-tracker.js" type="module"></script> -->
   </body>
 </html>
